--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kiritoapi",
-  "version": "1.0.8-alfa",
-  "description": "KiritoApi Api para facilitar o seu desenvolvimento de bots",
+  "name": "@kirito/cloudflared",
+  "version": "1.0.0-alfa",
+  "description": "Kirito Cloudflared e ótimo para criar tunnels da cloudflared para expor a sua aplicação a internet.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -26,6 +26,10 @@
     "console-log-colors": "^0.4.0",
     "node-fetch": "^3.3.2",
     "semver": "^7.5.4"
+    "cloudflared": "^0.7.0",
+    "@gibme/timer": "^1.0.14",
+    "@gibme/fetch": "^2.0.0",
+    "kirito.db": "^1.0.1"
   },
   "repository": {
     "type": "git",
